force-app/main/default/objects/Submission_Risk_Signal__c/Submission_Risk_Signal__c.object-meta.xml
<CustomObject>
    <description>Stores individual risk signals identified for a submission during appetite and risk evaluation.</description>
    <label>Submission Risk Signal</label>
    <nameField>
        <displayFormat>RSK-{0000}</displayFormat>
        <label>Risk Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Risk Signals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>