force-app/main/default/objects/Submission_Risk_Signal__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>