force-app/main/default/objects/Submission_Risk_Signal__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Local Rule</fullName><default>false</default><label>Local Rule</label></value>
            <value><fullName>External API</fullName><default>false</default><label>External API</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>